--- a/package.json
+++ b/package.json
@@ -1,5 +1,5 @@
 {
-  "name": "my-app",
+  "name": "shopping-site",
   "version": "0.0.0",
   "license": "MIT",
   "angular-cli": {},
@@ -21,9 +21,16 @@
     "@angular/platform-browser": "^2.3.1",
     "@angular/platform-browser-dynamic": "^2.3.1",
     "@angular/router": "^3.3.1",
+    "Yamm": "github:geedmo/yamm3",
+    "angular2-notifications": "^0.4.53",
+    "animate.css": "^3.5.2",
+    "bootstrap": "^4.0.0-alpha.6",
     "core-js": "^2.4.1",
+    "font-awesome": "^4.7.0",
+    "moment": "^2.17.1",
     "rxjs": "^5.0.1",
     "ts-helpers": "^1.1.1",
+    "underscore": "^1.8.3",
     "zone.js": "^0.7.2"
   },
   "devDependencies": {
