--- a/package.json
+++ b/package.json
@@ -27,6 +27,7 @@
     "bootstrap": "^4.0.0-alpha.6",
     "core-js": "^2.4.1",
     "font-awesome": "^4.7.0",
+    "lscache": "^1.1.0",
     "moment": "^2.17.1",
     "rxjs": "^5.0.2",
     "ts-helpers": "^1.1.1",
@@ -37,6 +38,7 @@
   "devDependencies": {
     "@angular/compiler-cli": "^2.3.1",
     "@types/jasmine": "2.5.38",
+    "@types/lscache": "^1.0.29",
     "@types/node": "^6.0.42",
     "@types/underscore.string": "0.0.30",
     "angular-cli": "1.0.0-beta.24",
